<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="书架"
            android:textColor="@color/black_text"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_oval"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="5dp"
            android:hint="搜索书架内容"
            android:imeOptions="actionSearch"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black_text"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_source_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="搜书源"
            android:textColor="@color/main_color"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="完成"
            android:textColor="@color/black_text"
            android:textSize="16dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_title_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:src="@drawable/title_more" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
