<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_square"
        android:enabled="true"
        android:icon="@drawable/selector_bottom_navigation_square"
        android:title="书城" />
    <item
        android:id="@+id/navigation_shelf"
        android:enabled="true"
        android:icon="@drawable/selector_bottom_navigation_shelf"
        android:title="书架" />
    <item
        android:id="@+id/navigation_me"
        android:enabled="true"
        android:icon="@drawable/selector_bottom_navigation_me"
        android:title="我" />
</menu>