...
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_check"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="检测"
                android:textColor="@color/main_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="编辑"
                android:textColor="@color/main_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="44dp"
...
