...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_book_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="书源管理"
        android:textColor="@color/black_text"
        android:textSize="18dp" />

    <Switch
        android:id="@+id/switch_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:checked="true"
        android:gravity="center_vertical"
...
